# todo-list-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yml
fastapi_zero_course/: app.py
migrations/: env.py
migrations/versions/: bad2122bb39e_create_users_table.py  bde6b4e60669_add_updated_at_column_in_user_table.py  f6cbd86d373d_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
todo_list_api/: app.py  database.py  schemas.py  security.py
todo_list_api/models/: todos.py  users.py
todo_list_api/routers/: auth.py  todos.py  users.py
todo_list_api/schemas/: auth.py  filters.py  root.py  todos.py  users.py
